--- a/crsorgi.gov.in/web/index.php/auth/birthCertificate/view/cert/B/ZGtDZlZNT1Y4WkZGbXN6a25MM1V5Zz09==.html
+++ b/crsorgi.gov.in/web/index.php/auth/birthCertificate/view/cert/B/ZGtDZlZNT1Y4WkZGbXN6a25MM1V5Zz09==.html
@@ -1064,7 +1064,7 @@ APPROVED THIS CERTIFICATE AS A VALID LEGAL DOCUMENT FOR ALL OFFICIAL PURPOSES".
 													<tr>
                                                             <!--// Added by Anupam 02-05-2016 at 5:30 PM for Qrcode integration (end)-->
 															<td align="left" valign="top">
-                                                                <img src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https:/qr/PROD/642770c15debf642c14f64e5/fm/cvvppo_crsorgi_gov_in.pdf?v=1685511874597;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L"
+                                                                <img src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https://cdn03.qrcodechimp.com/qr/PROD/642770c15debf642c14f64e5/fm/sonali_kumari.pdf?v=1685516469780;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L"
                                                                 style="width: 80px;  height: 80px;">                                                          </td>
 														   <!--// Added by Anupam 02-05-2016 at 5:30 PM for Qrcode integration (end)-->
 														   
